manifests/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-service
  namespace: exam
spec:
  selector:
    app: database
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
  type: ClusterIP
